--- a/login.css
+++ b/login.css
@@ -9,6 +9,14 @@ body {
     padding: 10px 20px 10px 20px;
     /* background-color: orange; */
 }
+.container2 {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 500px;
+    box-shadow: 0 3px 20px rgba(0,0,0,0.4);
+    padding: 10px 20px 10px 20px;
+    /* background-color: orange; */
+}
 h2 {
     text-align: center;
     padding-bottom: 20px;
